Add free response game mode
